add jetty-webapp
Signed-off-by: Olivier Lamy <oliver.lamy@gmail.com>