@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <parent>
     <groupId>org.eclipse.jetty.ee8</groupId>
@@ -7,16 +6,17 @@
   </parent>
 
   <modelVersion>4.0.0</modelVersion>
-  <artifactId>jetty-ee8-servlet</artifactId>
-  <name>EE8 :: Jetty :: Servlet Handling</name>
-  <description>Jetty Servlet Container</description>
+  <artifactId>jetty-ee8-webapp</artifactId>
+  <name>EE8 :: Jetty :: Webapp Application Support</name>
+  <description>Jetty web application support</description>
 
   <properties>
-    <bundle-symbolic-name>${project.groupId}.servlet</bundle-symbolic-name>
-    <spotbugs.onlyAnalyze>org.eclipse.jetty.*</spotbugs.onlyAnalyze>
+    <bundle-symbolic-name>${project.groupId}.webapp</bundle-symbolic-name>
+    <spotbugs.onlyAnalyze>org.eclipse.jetty.ee8.webapp.*</spotbugs.onlyAnalyze>
   </properties>
 
   <build>
+
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -32,7 +32,15 @@
               <outputDirectory>${project.build.outputDirectory}</outputDirectory>
               <resources>
                 <resource>
-                  <directory>${maven.multiModuleProjectDirectory}/jetty-ee9/jetty-ee9-servlet/src/main/resources</directory>
+                  <directory>${maven.multiModuleProjectDirectory}/jetty-ee9/jetty-ee9-webapp/src/main/resources</directory>
+                </resource>
+                <resource>
+                  <directory>src/main/config/etc</directory>
+                  <targetPath>org/eclipse/jetty/ee8/webapp</targetPath>
+                  <filtering>false</filtering>
+                  <includes>
+                    <include>webdefault-ee8.xml</include>
+                  </includes>
                 </resource>
               </resources>
             </configuration>
@@ -47,7 +55,16 @@
               <outputDirectory>${project.build.testOutputDirectory}</outputDirectory>
               <resources>
                 <resource>
-                  <directory>${maven.multiModuleProjectDirectory}/jetty-ee9/jetty-ee9-servlet/src/test/resources</directory>
+                  <directory>${maven.multiModuleProjectDirectory}/jetty-ee9/jetty-ee9-webapp/src/test/resources</directory>
+                </resource>
+                <resource>
+                  <directory>${maven.multiModuleProjectDirectory}/jetty-ee9/jetty-ee9-webapp/src/test/resources</directory>
+                </resource>
+                <resource>
+                  <directory>${maven.multiModuleProjectDirectory}/jetty-ee9/jetty-ee9-webapp/src/test/webapp</directory>
+                </resource>
+                <resource>
+                  <directory>${maven.multiModuleProjectDirectory}/jetty-ee9/jetty-ee9-webapp/src/test/webapp-alt-jsp</directory>
                 </resource>
               </resources>
             </configuration>
@@ -65,7 +82,7 @@
               <goal>modify-sources-ee9-to-ee8</goal>
             </goals>
             <configuration>
-              <sourceProjectLocation>${maven.multiModuleProjectDirectory}/jetty-ee9/jetty-ee9-servlet/src/main/java</sourceProjectLocation>
+              <sourceProjectLocation>${maven.multiModuleProjectDirectory}/jetty-ee9/jetty-ee9-webapp/src/main/java</sourceProjectLocation>
               <outputDirectory>${project.build.sourceDirectory}</outputDirectory>
             </configuration>
           </execution>
@@ -77,22 +94,41 @@
             </goals>
             <configuration>
               <testSources>true</testSources>
-              <sourceProjectLocation>${maven.multiModuleProjectDirectory}/jetty-ee9/jetty-ee9-servlet/src/test/java</sourceProjectLocation>
+              <sourceProjectLocation>${maven.multiModuleProjectDirectory}/jetty-ee9/jetty-ee9-webapp/src/test/java</sourceProjectLocation>
               <outputDirectory>${project.build.testSourceDirectory}</outputDirectory>
             </configuration>
           </execution>
         </executions>
       </plugin>
-
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
           <argLine>
             @{argLine} ${jetty.surefire.argLine}
-            --add-modules org.eclipse.jetty.util.ajax
-            --add-reads org.eclipse.jetty.ee8.servlet=org.eclipse.jetty.logging
           </argLine>
+          <useManifestOnlyJar>false</useManifestOnlyJar>
+          <additionalClasspathElements>
+            <additionalClasspathElement>${basedir}/src/test/resources/module/foo-bar-janb.jar</additionalClasspathElement>
+          </additionalClasspathElements>
+          <excludes>
+            <exclude>org.eclipse.jetty.ee8.webapp.WebAppClassLoaderUrlStreamTest</exclude>
+          </excludes>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.felix</groupId>
+        <artifactId>maven-bundle-plugin</artifactId>
+        <extensions>true</extensions>
+        <configuration>
+          <instructions>
+            <Require-Capability>
+              osgi.extender; filter:="(osgi.extender=osgi.serviceloader.processor)", osgi.serviceloader; filter:="(osgi.serviceloader=org.eclipse.jetty.ee8.webapp.Configuration)";cardinality:=multiple, osgi.extender; filter:="(osgi.extender=osgi.serviceloader.registrar)"
+            </Require-Capability>
+            <Provide-Capability>
+              osgi.serviceloader; osgi.serviceloader=org.eclipse.jetty.ee8.webapp.Configuration
+            </Provide-Capability>
+          </instructions>
         </configuration>
       </plugin>
     </plugins>
@@ -101,11 +137,11 @@
   <dependencies>
     <dependency>
       <groupId>org.eclipse.jetty.ee8</groupId>
-      <artifactId>jetty-ee8-nested</artifactId>
+      <artifactId>jetty-ee8-servlet</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.eclipse.jetty.ee8</groupId>
-      <artifactId>jetty-ee8-security</artifactId>
+      <groupId>org.eclipse.jetty</groupId>
+      <artifactId>jetty-xml</artifactId>
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
@@ -113,28 +149,17 @@
     </dependency>
     <dependency>
       <groupId>org.eclipse.jetty</groupId>
-      <artifactId>jetty-util-ajax</artifactId>
-      <optional>true</optional>
-    </dependency>
-    <dependency>
-      <groupId>org.eclipse.jetty</groupId>
-      <artifactId>jetty-jmx</artifactId>
-      <optional>true</optional>
-    </dependency>
-
-    <dependency>
-      <groupId>org.eclipse.jetty</groupId>
       <artifactId>jetty-slf4j-impl</artifactId>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.eclipse.jetty.toolchain</groupId>
-      <artifactId>jetty-test-helper</artifactId>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.eclipse.jetty</groupId>
       <artifactId>jetty-http-tools</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.eclipse.jetty.toolchain</groupId>
+      <artifactId>jetty-test-helper</artifactId>
       <scope>test</scope>
     </dependency>
     <dependency>
